--- a/templates/bundles/EasyAdminBundle/layout.html.twig
+++ b/templates/bundles/EasyAdminBundle/layout.html.twig
@@ -27,6 +27,7 @@
     {{ parent() }}
     <div style="width: 130px; position: fixed; bottom: 40px; left: 50px;">
     Munteanu Finance
+{#        {{ dump(filters) }}#}
     </div>
 {% endblock %}
 
