removed pwa, added first graph

--- a/templates/bundles/EasyAdminBundle/layout.html.twig
+++ b/templates/bundles/EasyAdminBundle/layout.html.twig
@@ -3,7 +3,7 @@
 
 {% block head_metas %}
     {{ parent() }}
-    {{ pwa() }}
+{#    {{ pwa() }}#}
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
     <script src="https://cdn.jsdelivr.net/gh/alumuko/vanilla-datetimerange-picker@latest/dist/vanilla-datetimerange-picker.js"></script>
 {% endblock %}
