links on graphs

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -15,6 +15,7 @@
                         <a class="btn btn-outline-light {{ type == 'daily' ? 'btn-primary' : '' }}" href="/admin">Daily</a>
                         <a class="btn btn-outline-light {{ type == 'weekly' ? 'btn-primary' : '' }}" href="/admin?type=weekly">Weekly</a>
                         <a class="btn btn-outline-light {{ type == 'monthly' ? 'btn-primary' : '' }}" href="/admin?type=monthly">Monthly</a>
+                        <a class="btn btn-outline-light {{ type == 'yearly' ? 'btn-primary' : '' }}" href="/admin?type=yearly">Yearly</a>
                     </div>
                     <div id="legend-container"></div>
                 </div>
