import fixes, started on tags

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -29,4 +29,8 @@
             </div>
         </div>
     </div>
+    <div style="height: 600px">
+    {{ render_chart(tagsChart) }}
+
+    </div>
 {% endblock %}
